fix double scrollbar in media selection overlay

--- a/src/Sulu/Bundle/MediaBundle/Resources/js/containers/MediaSelection/mediaSelectionOverlay.scss
+++ b/src/Sulu/Bundle/MediaBundle/Resources/js/containers/MediaSelection/mediaSelectionOverlay.scss
@@ -2,8 +2,6 @@
 
 .overlay {
     width: 1170px;
-    height: 650px;
-    overflow-y: auto;
     padding: $viewPadding;
     display: flex;
 
